# investment_analyzer_api

./: .env  .env.exemple  .env_exemple  .gitignore  Como configurar Port Forwarding.md  Dockerfile  Escalar sistema.md  README.md  alembic.ini  docker-compose.yml  estrutura de dados.md  importacao_statusinvest.xlsx  mkdocs.yml  portfolio_user.ipynb  pyproject.toml  requirements.txt  todo
.github/workflows/: CI.yml
alembic/: env.py
alembic/versions/: 479b66829c13_initial_migration.py  48b77266ad6d_alter_volume_column_to_biginteger.py
analyses/notebooks/: build_analyses.ipynb  playing_with_api.ipynb  valor_esperado.ipynb
app/: main.py
app/PortfolioManager/: dividendos.py
app/PortfolioManager/calculations/: assets.py  dividends_received_history.py
app/PortfolioManager/utils/: auxiliary_functions.py
app/data/: exemple_transaction.csv
app/data/database/: investment_manager_test.db
app/etl/: main.py
app/etl/pipeline/: extract.py  load.py  transform.py
app/infra/config/: database.py  database_sqlite.py  setup_postgresql.py
app/infra/database/: database.py
app/infra/initialize_database/: initialize_database.py
app/infra/providers/: hash_provider.py  token_provider.py
app/models/: models.py
app/repository/: auth.py  portfolio.py
app/routers/: auth.py  dependencies.py  portfolio.py
app/schemas/: portfolio.py  schemas.py
app/schemas/constants/: enums.py
app/settings/: config.py
app/utils/: dividends.py  portfolio_history.py
app/validation/: email_validation.py  name_validation.py  password_validation.py
docs/: api.md  contribuindo.md  faq.md  guia.md  index.md  introducao.md  roadmap.md
docs/funcionalidades/: ativos.md  cadastro.md  carteiras.md  relatorios.md
tests/test_services/: test_auth.py
